starships/style.css
* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}
html {
  box-sizing: border-box;
  scroll-behavior: smooth;
}

header {
  text-align: center;
  width: 100%;
  background-color: #36bbd9;
  box-shadow: 0 2px 0 rgba(0, 0, 0, 0.4);
  z-index: 10;
  color: #fff;
  display: block;
  padding: 1rem;
  font-size: xx-large;
  font-family: "Lato", sans-serif;
  font-weight: 400;
}

main {
  display: flex;
  background-color: #35748c;
  padding: 2rem;
}

.nav {
  margin-left: 1rem;
}

section {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
}

.box {
  background-color: #36bbd9;
  font-size: xx-large;
  font-family: "Lato", sans-serif;
  font-weight: 400;
  text-align: center;
}

.shipViewer {
  display: flex;
  justify-content: center;
  flex-direction: column;
  align-items: center;
}

.shipViewer img {
  background-color: #2c3a40;
  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
  border-radius: 2px;
}

.shipName {
  text-align: center;
  width: 600px;
  padding: 1rem 2rem;
  font-size: xx-large;
  font-family: "Lato", sans-serif;
  font-weight: 400;
  color: #fff;
  background-color: #2c3a40;
  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
  border-radius: 2px;
}

a {
  text-decoration: none;
  font-size: x-large;
  font-family: "Lato", sans-serif;
  font-weight: 400;
  color: #fff;
}

li:hover {
  background-color: #36bbd9;
}

a li {
  list-style: none;
  background-color: #2c3a40;
  padding: 1rem;
}

footer {
  text-align: center;
  padding: 2rem;
  font-size: x-large;
  background-color: #2c3a40;
  border-top: 4px solid #36bbd9;
}

footer a {
  color: #fff;
  font-family: "Lato", sans-serif;
  font-weight: 300;
  text-decoration: none;
}

footer h5 {
  color: #fff;
  font-family: "Lato", sans-serif;
  font-weight: 300;
  text-decoration: none;
}

